--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:Qazwsx12@localhost:5432/test
+sqlalchemy.url = postgresql://postgres:Qazwsx12@db:5432/test
+
 
 
 [post_write_hooks]
