--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 fastapi==0.115.8
 httpx==0.28.1
+passlib==1.7.4
+pydantic==2.10.6
+PyJWT==2.10.1
+PyJWT==2.10.1
 pytest==8.3.4
 SQLAlchemy==2.0.37
 sqlmodel==0.0.22
 uvicorn==0.34.0
 psycopg2==2.9.10
+alembic==1.14.1
+python-multipart==0.0.20
