--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,22 @@ services:
       - "8000:8000"
     environment:
       DATABASE_URL: postgresql://postgres:Qazwsx12@db:5432/test
-      
     command: >
       sh -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    volumes:
+      - .:/app
+
+  tests:
+    build: .
+    container_name: fastapi_tests
+    restart: "no"
+    depends_on:
+      - db
+    environment:
+      PYTHONPATH: /app
+      DATABASE_URL: postgresql://postgres:Qazwsx12@db:5432/test
+    command: >
+      sh -c "PYTHONPATH=. pytest tests/test_main.py"
     volumes:
       - .:/app
 
